--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
 
 *{
     box-sizing: border-box;
+    color: #3a3a3a;
 }
 
 html {
@@ -26,11 +27,10 @@ body{
     background-color: #FBEBB5;
     max-width: 100%;
     width: 1440px;
-    height: 100px;
+    height: 10vh;
 }
 
 .main-header .fa-warehouse{
-    color: #000;
     font-size: 2rem;
     cursor: pointer;
 }
@@ -43,7 +43,6 @@ body{
 
 .main-header .header-nav a{
     text-decoration: none;
-    color: #000;
     font-weight: 500;
     line-height: 24px;
 }
@@ -52,4 +51,61 @@ body{
     font-size: 1rem;
     display: flex;
     gap: 2rem;
+}
+
+
+/*********************************************** .banner-section */
+.banner-section{
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    background-color: #FBEBB5;
+    height: 90vh;
+    max-width: 100%;
+    width: 1440px;
+}
+
+.banner-section .banner-text{
+    max-width: 25%;
+    font-size: 2rem;
+}
+
+.banner-section .banner-text a{
+    text-decoration: none;
+    padding-bottom: 0.5rem;
+    border-bottom: 2px solid #3a3a3a;
+}
+
+
+/*********************************************** .best-items */
+.best-items{
+    display: flex;
+    justify-content: space-evenly;
+    background-color: #faf4f4;
+    max-width: 100%;
+    width: 1440px;
+}
+
+.best-items .best-item{
+    position: relative;
+}
+
+.best-item .best-item-text{
+    position: absolute;
+    top: 70%;
+    left: 30%;
+}
+
+.best-item .best-item-text h2{
+    letter-spacing: 1px;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.best-item .best-item-text a{
+    font-weight: 600;
+    font-size: 1.3rem;
+    text-decoration: none;
+    padding-bottom: 0.3rem;
+    border-bottom: 1px solid #3a3a3a;
 }
