--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+:root {
+    --main-bg-color: #FBEBB5;
+    --second-bg-color: #faf4f4;
+}
+
 *{
     box-sizing: border-box;
     color: #3a3a3a;
@@ -19,12 +24,13 @@ body{
     margin: 0;
 }
 
+
 /*********************************************** HEADER */
 .main-header{
     display: flex;
     justify-content: space-evenly;
     align-items: center;
-    background-color: #FBEBB5;
+    background-color: var(--main-bg-color);
     max-width: 100%;
     width: 1440px;
     height: 10vh;
@@ -59,10 +65,13 @@ body{
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    background-color: #FBEBB5;
+    background-color: var(--main-bg-color);
     height: 90vh;
     max-width: 100%;
     width: 1440px;
+}
+.banner-section .banner-image img{
+    width: 100%;
 }
 
 .banner-section .banner-text{
@@ -81,13 +90,18 @@ body{
 .best-items{
     display: flex;
     justify-content: space-evenly;
-    background-color: #faf4f4;
+    background-color: var(--second-bg-color);
     max-width: 100%;
     width: 1440px;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
 }
 
 .best-items .best-item{
     position: relative;
+}
+.best-item img{
+    width: 100%;
 }
 
 .best-item .best-item-text{
@@ -109,3 +123,116 @@ body{
     padding-bottom: 0.3rem;
     border-bottom: 1px solid #3a3a3a;
 }
+
+
+/*********************************************** .top-pics */
+.top-pics{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 100%;
+    width: 1440px;
+}
+
+.top-pics .top-pics-text{
+    text-align: center;
+    margin-top: 3rem;
+}
+
+.top-pics .top-pics-text h2{
+    letter-spacing: 1px;
+    font-size: 2rem;
+    font-weight: 600;
+}
+
+.top-pics .top-pics-text p{
+    font-weight: 500;
+    color: #9f9f9f;
+}
+
+.top-pics .top-pics-items{
+    display: flex;
+    justify-content: space-evenly;
+    gap: 5rem;
+    width: 90%;
+    margin-top: 3rem;
+}
+
+.top-pics-items .top-pics-item{
+    width: 25%;
+    display: flex;
+    flex-direction: column;
+}
+
+.top-pics-items .top-pics-item img{
+    width: 100%;
+}
+
+.top-pics-items .top-pics-item p{
+    font-size: 1.2rem;
+    line-height: 2rem;
+    font-weight: 500;
+}
+
+.top-pics-items .top-pics-item span{
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: auto;
+}
+
+.top-pics .top-pics-link{
+    margin-top: 5rem;
+}
+
+.top-pics .top-pics-link a{
+    text-decoration: none;
+    font-size: 1.5rem;
+    font-weight: 500;
+    border-bottom: 2px solid;
+    padding-bottom: 0.5rem;
+}
+
+/*********************************************** .new-arrivals */
+.new-arrivals{
+    background-color: var(--main-bg-color);
+    display: flex;
+    align-items: center;
+    max-width: 100%;
+    width: 1440px;
+    text-align: center;
+    margin-top: 7rem;
+}
+
+.new-arrivals .new-arrivals-img{
+    width: 65%;
+}
+
+.new-arrivals .new-arrivals-img img{
+    width: 100%;
+}
+
+.new-arrivals .new-arrivals-text{
+    width: 35%;
+}
+
+.new-arrivals .new-arrivals-text p{
+    font-size: 1.7rem;
+    font-weight: 600;
+    margin: 0;
+}
+
+.new-arrivals .new-arrivals-text h2{
+    font-size: 3.5rem;
+    margin: 0;
+}
+
+.new-arrivals .new-arrivals-text a{
+    display: inline-block;
+    font-size: 2rem;
+    margin-top: 1rem;
+    text-decoration: none;
+    border: 1px solid;
+    padding: 1rem 3rem;
+    box-shadow: 0px 3px 3px 1px rgba(0, 0, 0, 0.19);
+}
+
