--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -682,7 +682,7 @@ body{
 }
 
 .more-products-items .add-products-items{
-    background-color: #FBEBB5;
+    background-color: var(--main-bg-color);
     padding: 1rem 2rem;
     border: none;
     font-weight: 700;
@@ -690,4 +690,34 @@ body{
     line-height: 1.875rem;
     border-radius: 10px;
     cursor: pointer;
+}
+
+
+/*********************************************** .features */
+
+.features{
+    width: 1440px;
+    max-width: 100%;
+    padding: 0 6rem;
+    margin-top: 2rem;
+    background-color: var(--second-bg-color);
+    display: flex;
+    padding: 6rem;
+    justify-content: space-between;
+}
+
+.features .feature{
+    flex: 0 1 30%; 
+}
+
+.feature h3{
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 3rem;
+}
+
+.feature p{
+    font-weight: 400;
+    font-size: 1.25;
+    line-height: 1.875;
 }
