--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -626,10 +626,17 @@ body{
 .products-manager .sort select{
     flex-basis: 40%;
     border: none;
+    outline: none;
     padding: 1rem;
     font-weight: 400;
     font-size: 1.25rem;
     line-height: 1.875rem;
+}
+
+.products-manager .sort select:active,
+.products-manager .sort select:focus{
+    border: none;
+    outline: none;
 }
 
 
@@ -694,7 +701,6 @@ body{
 
 
 /*********************************************** .features */
-
 .features{
     width: 1440px;
     max-width: 100%;
@@ -720,4 +726,225 @@ body{
     font-weight: 400;
     font-size: 1.25;
     line-height: 1.875;
+}
+
+
+/*
+*
+* SINGLE-PRODUCT
+*
+*/
+
+/*********************************************** .breadcrumbs */
+.breadcrumbs{
+    width: 1440px;
+    max-width: 100%;
+    margin-top: 1rem;
+    padding: 2.4rem 0 2.4rem 6.25rem;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 1.5rem;
+}
+
+.breadcrumbs span{
+    padding-left: 2rem;
+    border-left: 2px solid #9f9f9f;
+    font-weight: 600;
+}
+
+
+/*********************************************** .breadcrumbs */
+.single-product{
+    width: 1440px;
+    max-width: 100%;
+    padding: 2.2rem 6.25rem 4rem;
+}
+
+.single-product .single-product-info{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5rem;
+}
+
+.single-product-info .single-product-gallery{
+    display: grid;
+    grid-template-columns: 2fr 8fr;
+    gap: 2rem;
+    align-self: start;
+}
+
+.single-product-gallery .previews{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.single-product-gallery .previews img{
+    background-color: var(--main-bg-color);
+    border-radius: 10px;
+}
+
+.single-product-gallery .main-picture{
+    background-color: var(--main-bg-color);
+    border-radius: 10px;
+    display: flex;
+}
+
+.single-product-info .single-product-main-properties{
+    /* background-color: #d9d9d9; */
+}
+
+.single-product-main-properties .main-title{
+    font-weight: 400;
+    font-size: 2.6rem;
+    line-height: 4rem;
+    margin: 0;
+}
+
+.single-product-main-properties .main-price{
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 2.25rem;
+    color: #9F9F9F;
+    margin: 0;
+}
+
+.single-product-main-properties .rating{
+    margin: 1rem 0 1rem;
+    display: flex;
+    align-items: center;
+    gap: 1.5rem;
+}
+
+.rating .rating-stars{
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+}
+
+.rating .rating-count{
+    padding: 0.5rem;
+    padding-left: 1.5rem;
+    border-left: 1px solid #9F9F9F;
+    font-weight: 400;
+    font-size: 0.8rem;
+    line-height: 1.25rem;
+    color: #9F9F9F;
+}
+
+.single-product-main-properties .main-description{
+    font-weight: 500;
+    line-height: 1.5rem;
+}
+
+.single-product-main-properties .main-size{
+    margin-top: 1.4rem;
+}
+
+.single-product-main-properties .main-size p{
+    margin: 0;
+    margin-bottom: 0.75rem;
+    font-weight: 400;
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+    color: #9F9F9F;
+}
+
+.main-size .main-size-items{
+    display: flex;
+    gap: 1rem;
+}
+
+.main-size-items .main-size-item{
+    background-color: var(--second-bg-color);
+    width: 2rem;
+    height: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    font-weight: 400;
+    font-size: 0.8rem;
+    line-height: 1.25rem;
+}
+
+.main-size-items .main-size-item.size-active{
+    background-color: var(--main-bg-color);
+}
+
+.single-product-main-properties .main-color{
+    margin-top: 1.4rem;
+}
+
+.single-product-main-properties .main-color p{
+    margin: 0;
+    margin-bottom: 0.75rem;
+    font-weight: 400;
+    font-size: 0.9rem;
+    line-height: 1.3rem;
+    color: #9F9F9F;
+}
+
+.main-color .main-color-items{
+    display: flex;
+    gap: 1rem;
+}
+
+.main-color-items .main-color-item{
+    width: 2rem;
+    height: 2rem;
+    border-radius: 50%;
+    background-color: var(--main-bg-color);
+}
+
+.single-product-main-properties .add-to-cart{
+    margin-top: 2rem;
+    padding-bottom: 3.75rem;
+    display: flex;
+    gap: 1.1rem;
+    border-bottom: 1px solid #D9D9D9;
+}
+
+.add-to-cart .quantity-to-add{
+    border: 1px solid #9F9F9F;
+    border-radius: 10px;
+    padding: 0.3rem;
+    display: flex;
+}
+
+.quantity-to-add .input-quantity{
+    border: none;
+    width: 2rem;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    margin-left: 0.5rem;
+}
+
+.quantity-to-add .decrease,
+.quantity-to-add .increase{
+    background-color: #fff;
+    margin: 0;
+    padding: 0.5rem 1rem;
+    border: none;
+    font-weight: 500;
+    font-size: 1.5rem;
+    line-height: 2rem;
+    cursor: pointer;
+}
+
+.add-to-cart .input-add-to-cart{
+    padding: 1rem 3rem;
+    background-color: #fff;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    font-weight: 400;
+    font-size: 1.25rem;
+    line-height: 1.9rem;
+    cursor: pointer;
 }
